# game-of-life

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: web.rs
web/: app.ts  package.json  tsconfig.json  webpack.config.js
web/public/: bootstrap.js  index.html  index.js  index.ts
